--- a/AlipayDemo/AlipayDemo/Base.lproj/Main.storyboard
+++ b/AlipayDemo/AlipayDemo/Base.lproj/Main.storyboard
@@ -26,6 +26,9 @@
                                 <state key="normal" title="去支付">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="toPayOnClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="qn0-Zr-eBc"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="0.01" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qu1-IE-tmp">
                                 <rect key="frame" x="250" y="220" width="100" height="30"/>
@@ -33,16 +36,16 @@
                                     <constraint firstAttribute="width" constant="100" id="Zu5-Oc-jbl"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="支付金额:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9UB-yU-3ah">
-                                <rect key="frame" x="172" y="225" width="73" height="21"/>
+                                <rect key="frame" x="172" y="225.5" width="73" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="元" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BOK-GP-x77">
-                                <rect key="frame" x="355" y="225" width="17" height="21"/>
+                                <rect key="frame" x="355" y="225.5" width="17" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -60,6 +63,9 @@
                             <constraint firstAttribute="centerY" secondItem="rB6-0C-Zft" secondAttribute="centerY" id="utU-Nf-JPS"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="ttfAmount" destination="qu1-IE-tmp" id="oWR-Y2-gpP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
